--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
+    <title>昌黎段友俱乐部</title>
 </head>
 <body>
-    <h1>hello word</h1>
+    <h1>昌黎段友俱乐部成立了！！</h1>
 </body>
 </html>
