--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>昌黎段友俱乐部</title>
 </head>
 <body>
-    <h1>昌黎段友俱乐部成立了！！</h1>
+    <h1>昌黎段友俱乐部专用网站正式成立了！！</h1>
+     <h1>兄弟们，别着急。小弟有空就往网站补充内容，希望段友们多多提供素材！</h1>
+     <h1>素材类型：图片、视频、段子、小自拍、其他链接等等统统甩过来！</h1>
+     <h1>发送邮箱至：12624859@qq.com或302601727@qq.com</h1>
+     
+   
 </body>
 </html>
