--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </style>
 <head>
     <meta charset="UTF-8" />
-    <title>昌黎段友俱乐部</title>
+    <title>昌黎段友俱乐部官方网站</title>
 </head>
 <body>
     <h1>昌黎段友俱乐部专用网站正式成立了！！</h1>
