--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>昌黎段友俱乐部官方网站</title>
 </head>
 <body>
-    <h1>昌黎段友俱乐部专用网站正式成立了！！</h1>
+    <h1>昌黎段友俱乐部官方网站正式成立了！！</h1>
      <h2>兄弟们，别着急。小弟有空就往网站补充内容，希望段友们多多提供素材！</h2>
      <h2>素材类型：图片、视频、段子、小自拍、其他链接等等统统甩过来！</h2>
      <h3>发送邮箱至：12624859@qq.com或302601727@qq.com（群主）</h3>
