--- a/index.html
+++ b/index.html
@@ -1,23 +1,110 @@
-<!DOCTYPE html>
-<html lang="en">
-    <style>
-        h1{
-        color:red}
-        h2{
-        color:green}
-        h3{
-        color:yellow}
-        </style>
+
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8" />
-    <title>昌黎段友俱乐部官方网站</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta name="format-detection" content="telephone=no">
+    <title></title>
+    <link type="text/css" href="css/reset.css" rel="stylesheet">
+    <link type="text/css" href="css/style.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no,maximum-scale=1.0">
+    <meta name="viewport" content="minimal-ui">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui">
 </head>
+<style type="text/css">
+    body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,input,button,p,th,td{margin:0;padding:0;}
+:focus{outline:none;}
+em,strong,th{font-style:normal;font-weight:normal;}
+h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}
+li{list-style:none;}
+table{border-collapse:collapse;border-spacing:0;}
+caption,th{text-align:left;font-weight:normal;}
+sup,sub{font-size:100%;vertical-align:baseline;}
+button{cursor:pointer;}
+textarea{display:block;resize:none;overflow-y:auto;}
+body{font:12px/1.5 "Microsoft Yahei","微软雅黑",Tahoma,Arial,Helvetica,STHeiti;color:#333;background-color:#FFF;}
+a{color:#369;text-decoration:none;}
+a:hover{text-decoration:underline;}
+.clearfix:after{content:".";display:block;height:0;clear:both;visibility:hidden;}
+.clearfix{zoom:1;}
+html {height: 100%;width: 100%;}
+html{ font:normal 62.5%/1.5rem "Arial","Microsoft YaHei";}
+body{ overflow:scroll; overflow-y:hidden;overflow:hidden; background:black;}
+
+@media screen and (min-width:360px){.index table{ top:26%;}.ku{border: medium none;color: #666;font-size: 1rem; margin-bottom:8px; padding:3%;width:60%; height:25px;}
+}
+@media screen and (min-width:600px){.index table{ top:26%;}.ku{border: medium none;color: #666;font-size: 1rem; margin-bottom:8px; padding:3%;width:60%;}
+}
+@media screen and (min-width:320px)and (max-width:375px){.index table{ top:17%;}.gz_wrapImgList2 p{ font-size:0.8rem;}.ku{border: medium none;color: #666;font-size: 1rem; margin-bottom:8px; padding:3%;width:60%;}.hj_wrapImgList2 { margin-top:100px;}
+}
+@media screen and (min-width:320px)and (max-width:360px){.index table{ top:17%;}.gz_wrapImgList2 p{ font-size:0.8rem;}.ku{border: medium none;color: #666;font-size: 1rem; margin-bottom:8px; padding:3%;width:60%;}
+}
+@media screen and (min-width:375px)(max-width:414px){.index table{ top:16%;font-size:0.8rem;}.ku{border: medium none;color: #666;font-size: 1rem; margin-bottom:8px; padding:3%;width:60%;}}
+.wrapImgList2  table img{ width:19rem;}
+.wrapImgList table img{ width:19rem;}
+/* iphone6  */
+@media (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) {  .wrapImgList table img{ width:240px;}.gz_wrapImgList2 p{ font-size:1.5rem;}.ku{border: medium none;color: #666;font-size: 1rem; margin-bottom:8px; padding:4%;width:60%; height:18px;}}
+/* iphone6 plus */
+@media (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) {.wrapImgList table img{ width:250px; margin-left:10px; margin-right:10px;}.gz_wrapImgList2 p{ font-size:1.5rem;}.ku{border: medium none;color: #666;font-size: 1rem; margin-bottom:8px; padding:4%;width:60%;}}
+.clear {zoom:1;}
+
+.hj_wrapPage {height: 100%;width: 100%;overflow: hidden;}
+.hj_wrapImgList {width: 100%;background:#0099ff;background-size:100% 100%;background-repeat:no-repeat; height: 84px ;}
+.hj_wrapImgList1 {top:30%;left:50%; width:100%; padding-left:5px; padding-right:5px;color: #000;font-size: 1.5rem;}
+.hj_wrapImgList2 { margin-top:20px;}
+.hj_wrapImgList p{ padding:27px; font-size:1.6rem;font-weight:bold; color:#FFFFFF;}
+.hj_wrapImgList2 td{ line-height:30px;}
+.hj_wrapImgList3 {top:70%;left:50%; width:80%; padding-left:5px; padding-right:5px;color:#fff; font-size:14px;}
+.hj_wrapImgList4 {width:100%;color:#fff;font-size: 1rem;margin-top:11px; height:40px;}
+.hj_wrapImgList4 a{border-radius:5px;background:#009dd9;font-size:2rem; font-weight:bold; color:#ffffff; font-family:"微软雅黑";padding:10px 28%;}
+.hj_wrapImgList5 {width:100%;color:#fff;font-size:0.8rem; position:absolute;bottom:35px;}
+.bd{height: 100%;background:#b0b0b0;}
+.bd1{height: 100%;height: 80%; margin: 0 auto;}
+.bd_wrapImgList {width:100%; padding-left:5px; padding-right:5px;color:#FFFFFF; font-size:2rem; margin-top:50px;}
+.bd_wrapImgList1 {width:100%; padding-left:5px; padding-right:5px;color:#FFFFFF; font-size:1.5rem; margin-top:70px;}
+.bd_wrapImgList00{ font-size:1.5rem; color:#FFFFFF;  margin:0 auto;}
+.bd_wrapImgList1 {color:#FFFFFF; font-size:1.5rem;margin-top:60px; margin-bottom:10px;}
+.bd_wrapImgList00 p{}
+.ku{border: medium none;color: #666;font-size: 1.3rem; margin-bottom:15px;width:60%; padding:10px;}
+
+.wa_wrapImgList{ margin-top:30px; font-size:1.6rem; color:#FFFFFF;  font-weight:bold;}
+</style>
 <body>
-    <h1>昌黎段友俱乐部官方网站正式成立了！！</h1>
-     <h2>段友兄弟们，别着急，待小弟有空就往网站补充内容，还望段友们多多提供素材！</h2>
-     <h2>素材类型：图片、视频、段子、小自拍、其他链接等等统统甩过来！</h2>
-     <h3>发送邮箱至：12624859@qq.com或302601727@qq.com（群主）</h3>
-     
-   
+<div class="hj_wrapPage">
+    <div class="hj_wrapImgList">
+        <center><p ;>昌黎段友俱乐部官方网站正式成立了！！</p></center>
+
+    </div>
+</div>
+<div class="bd1">
+    <div class="wa">
+     <div class="wa_wrapImgList">
+       <p style="color:red"> @段友兄弟们，别着急，待小弟有空就往网站补充内容，还望段友们多多提供素材！</p>
+       <p style="color:green"> ~~素材类型：图片、视频、段子、小自拍、其他链接等等统统甩过来！</p>
+       <p style="color:blue">发送邮箱至：<p style="color:blue">br12624859@qq.com或302601727@qq.com（群主）</p></p>
+
+
+
+
+
+    </div>
+    </div>
+     <div class="hj_wrapImgList2">
+      <!--  -->
+    </div>
+<div class="hj_wrapImgList4">
+<center>
+</center>
+</div>
+<div class="ft">
+<div class="hj_wrapImgList5">
+<center style="font-size:15px">© 2018-2099 昌黎段友俱乐部官方网版权所有 </center>
+<center style="font-size:15px">冀C备0000000000号</center>
+</div>
+</div>
+
+</div>
+</div>
 </body>
 </html>
