--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ body{ overflow:scroll; overflow-y:hidden;overflow:hidden; background:black;}
 
  <div class="box">
         <div class="unit">
-            <div>天</div>
+            <div>天（戳我）</div>
             <div>王</div>
             <div>盖</div>
             <div>地</div>
@@ -159,7 +159,7 @@ body{ overflow:scroll; overflow-y:hidden;overflow:hidden; background:black;}
 </div>
 <div class="ft">
 <div class="hj_wrapImgList5">
-<center style="font-size:15px">© 2018-2099 昌黎段友俱乐部官方网版权所有 </center>
+<center style="font-size:15px">© 2018-2099 昌黎段友俱乐部官方网站版权所有 </center>
 <center style="font-size:15px">冀C备0000000000号</center>
 </div>
 </div>
