--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ body{ overflow:scroll; overflow-y:hidden;overflow:hidden; background:black;}
 
  <div class="box">
         <div class="unit">
-            <div>天（双击戳我）</div>
+            <div>天 <h5>双击戳我<h5></div>
             <div>王</div>
             <div>盖</div>
             <div>地</div>
