--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@ body{ overflow:scroll; overflow-y:hidden;overflow:hidden; background:black;}
      <div class="wa_wrapImgList">
        <p style="color:red"> @段友兄弟们，别着急，待小弟有空就往网站补充内容，还望段友们多多提供素材！</p>
        <p style="color:green"> ~~素材类型：图片、视频、段子、小自拍、其他链接等等统统甩过来！</p>
-       <p style="color:blue">发送邮箱至：<p style="color:blue">br12624859@qq.com或302601727@qq.com（群主）</p></p>
+       <p style="color:blue">发送邮箱至：</p>
+         <p style="color:blue">12624859@qq.com或302601727@qq.com（群主）</p>
 
  <div class="box">
         <div class="unit">
